# PEP-HPC

./: CMakeLists.txt  README.md
demos/: demo_simd.cc  demo_tasks.cc  simd_timings.cc  timing_mem.cc
src/: simd.h  simd_arm64.h  simd_avx.h  taskmanager.cc  taskmanager.h  timer.cc  timer.h
